Fix less-wide techlogos not being squares
And remove Bootstrap's super serif-y written name below it's techlogo - it looks bad.

--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ footer .only-image {
   background-color: var(--logo-background-color);
   box-sizing: border-box;
   padding: 0.4em;
+  width: 100%; /* of their column in the grid */
 }
 
 /* Override the default a border-radius. The default a:hover/:focus border is less round than everything else to avoid colliding with text */
